--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <!-- STYLES -->
+    <style>
+      [v-cloak] {
+        display: none;
+      }
+    </style>
+    <!-- END STYLES -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+    <video autoplay loop muted class="video-bg">
+      <source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app" v-cloak></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
